# mcp-example

./: .env  client.py  db.py  main.py  pyproject.toml  server.py  servers_config.json  tool.py  web.py
