[project]
name = "mcp-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.2.0",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
]
